2019-7-7	v0.13.5	TNPLR	<hsiaosvideo@gmail.com>
	* Add A ChangLog

2019-7-7	v0.14-alpha.1	TNPLR	<hsiaosvideo@gmail.com>
	* Put things in different folders
	* boot/asm_utility.S: Share code for I/O

2019-7-7	v0.14-alpha.2	TNPLR	<hsiaosvideo@gmail.com>
	* multiboot_header.S: Enter compatibility mode

2019-7-8	v0.14-alpha.3	TNPLR	<hsiaosvideo@gmail.com>
	* loader.S: Fix GDTR's limit value
	* multiboot_header.S: Load long mode GDTs

2019-7-8	v0.14	TNPLR <hsiaosvideo@gmail.com>
	* boot/multiboot_header.S:
		* 64 bit mode ATA and File reading
		* Read kernel64.elf
	* init/kmain.c: Infinity Loop
	* kernel/kernel64.ld: kernel64.elf link file