@@ -1,9 +1,9 @@
 export CC=gcc
-export CFLAGS=-ffreestanding -no-pie -fno-pic -std=gnu11 -mno-red-zone -Wall
+export CFLAGS=-ffreestanding -no-pie -fno-pic -std=gnu11 -mno-red-zone -Wall -I${PWD}/include
 export LD=ld
 export LDFLAGS=
-
-.PHONY: all clean filesys boot init bochs qemu
+KERN64_OBJ=init/main.o driver/text.o
+.PHONY: all clean filesys boot init bochs qemu driver
 all: hdd.img kernel64.elf
 	@echo "========================================================"
 	@echo "Please enter \"sudo make filesys\" to complete the image"
@@ -12,6 +12,8 @@ boot:
 	make -C boot/ all
 init:
 	make -C init/ all
+driver:
+	make -C driver/ all
 filesys: hdd.img kernel64.elf
 	losetup -o 16384 /dev/loop3 hdd.img
 	mkfs.ext2 /dev/loop3
@@ -22,8 +24,8 @@ filesys: hdd.img kernel64.elf
 	umount mnt/
 	rmdir mnt/
 	losetup -d /dev/loop3
-kernel64.elf: init
-	${LD} ${LDFLAGS} -Tkernel/kernel64.ld -m elf_x86_64 init/main.o -o $@
+kernel64.elf: init driver
+	${LD} ${LDFLAGS} -Tkernel/kernel64.ld -m elf_x86_64 ${KERN64_OBJ} -o $@
 hdd.img: boot
 	dd if=/dev/zero of=$@ bs=512 count=122880
 	dd if=boot/mbr.bin of=$@ bs=512 count=1 conv=notrunc
@@ -33,6 +35,7 @@ clean:
 	make -C vmtest/ clean
 	make -C boot/ clean
 	make -C init/ clean
+	make -C driver/ clean
 bochs:
 	make -C vmtest/ bochs
 qemu:
