@@ -1,0 +1,8 @@
+#ifndef TEXT_H_
+#define TEXT_H_
+void bufferScroll(void);
+void initText(void);
+void kfflush(void);
+void bufferPutc(char ch);
+void kputc(char ch);
+#endif // TEXT_H_
